--- a/brewery/templates/brewery/signup.htm
+++ b/brewery/templates/brewery/signup.htm
@@ -13,5 +13,15 @@
     <button type="submit">Sign Up</button>
 </form>
 
+{% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li>
+     {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}
+    </li>
+    {% endfor %}
+  </ul>
+{% endif %}
+
 </body>
 </html>
